--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>springcloudme</name>
     <description>Demo project for Spring Cloud</description>
-
+    <packaging>pom</packaging>
     <modules>
         <module>eureka-server</module>
         <module>service-zuul</module>
