--- a/service-tp/src/main/resources/application.yml
+++ b/service-tp/src/main/resources/application.yml
@@ -23,3 +23,7 @@ spring:
     expose-session-attributes: false
     request-context-attribute: request
     suffix: .html
+
+feign:
+  hystrix:
+    enabled: true    
