--- a/deploy-file/config-server.yaml
+++ b/deploy-file/config-server.yaml
@@ -2,41 +2,41 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-tp
+  name: config-server
 spec:
   selector:
     matchLabels:
-      app: springcloud-service-tp
+      app: springcloud-config-server
 
   replicas: 1
 
   template:
     metadata:
       labels:
-        app: springcloud-service-tp
+        app: springcloud-config-server
     spec:
       containers:
-       - name: service-tp-instance
-         image: registry.cn-hangzhou.aliyuncs.com/wooddeep/service-tp:v3
+       - name: config-server-instance
+         image: registry.cn-hangzhou.aliyuncs.com/wooddeep/config-server:v0.3
          env:
          - name: EUREKA_URL
            value: eureka-server
          ports:
-         - containerPort: 8763
+         - containerPort: 8765
 
 
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: service-tp
+  name: config-server
 spec:
   selector:
-    app: springcloud-service-tp
+    app: springcloud-config-server
   ports:
   - protocol: TCP
-    port: 8763
-    targetPort: 8763
+    port: 8765
+    targetPort: 8765
   #type: NodePort
 
 
