--- a/deploy-file/service-api.yaml
+++ b/deploy-file/service-api.yaml
@@ -17,10 +17,12 @@ spec:
     spec:
       containers:
        - name: service-api-instance
-         image: registry.cn-hangzhou.aliyuncs.com/magiclian/service-api:v4
+         image: registry.cn-hangzhou.aliyuncs.com/wooddeep/service-api:v4.2
          env:
          - name: EUREKA_URL
            value: eureka-server
+         - name: CONFIG_URL
+           value: config-server
          ports:
          - containerPort: 8764
 
