--- a/service-tp/pom.xml
+++ b/service-tp/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- hystrix相关 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -70,7 +82,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.2.0</version>
                 <configuration>
-                    <imageName>registry.cn-hangzhou.aliyuncs.com/magiclian/service-tp:v3</imageName>
+                    <imageName>registry.cn-hangzhou.aliyuncs.com/wooddeep/service-tp:v3</imageName>
                     <serverId>my-docker-registry</serverId>
                     <baseImage>java</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
