--- a/adminConfig/custom-config-dev.yml
+++ b/adminConfig/custom-config-dev.yml
@@ -7,5 +7,5 @@ service_api:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/bootdb?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.140.102:3306/bootdb?useUnicode=true&characterEncoding=utf8
 
