--- a/adminConfig/custom-config-dev.yml
+++ b/adminConfig/custom-config-dev.yml
@@ -8,4 +8,6 @@ service_api:
 spring:
   datasource:
     url: jdbc:mysql://192.168.140.102:3306/bootdb?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123456
 
